# T-VQ-VAE-TrajGen

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
configs/: config.yaml  fcn_config.yaml
notebooks/: Quality_Statistical_metrics.ipynb  correlation_heatmaps.ipynb  distribution_plots.ipynb  pca_tsne.ipynb  time_series.ipynb  trajectories_distances.ipynb
timevqvae/evaluation/: __init__.py  eval_utils.py  flyability_eval.py  metrics.py  rocket_functions.py  stat_metrics.py
timevqvae/evaluation/flyability_utils/: __init__.py  eval_logic.py
timevqvae/evaluation/flyability_utils/trajectory_distances/: basic_euclidean.py  basic_spherical.py  discret_frechet.py  dtw.py  edr.py  erp.py  frechet.py  hausdorff.py  lcss.py  linecell.py  segment_distance.py  sowd.py  sspd.py
timevqvae/generation/: __init__.py  sampler.py
timevqvae/models/: __init__.py  bidirectional_transformer.py  fcn.py  fidelity_enhancer.py  maskgit.py  vq.py  vq_vae.py
timevqvae/scripts/: evaluate.py  evaluate_flyability.py  generate.py  preprocess.py  preprocess_landing.py  train.py  train_fcn.py
timevqvae/trainers/: __init__.py  stage1.py  stage2.py  stage3.py
timevqvae/utils/: __init__.py  data_utils.py  plot_utils.py  sample_utils.py  train_utils.py
